# routes/api.php
@@ -11,6 +11,7 @@ use App\Http\Controllers\AuthController;
 Route::middleware('auth:sanctum')->group(function () {
     Route::post('/logout', [AuthController::class, 'logout']);
     Route::get('/me',      [AuthController::class, 'me']);
+    Route::apiResource('/roles', \App\Http\Controllers\RoleController::class);
 });
 
 Route::post('/login', [AuthController::class, 'login']);
